# cost_confirmation_bot

./: .env.example  .gitignore  LICENSE  Makefile  docker-compose.yml  pyproject.toml
app/: config.py
app/api/: Dockerfile  main.py  pyproject.toml
app/api/handlers/: access_levels.py  user.py
app/api/handlers/requests/: user.py
app/api/handlers/responses/: access_levels.py  base.py  errors.py  user.py
app/api/middlewares/: db_session.py
app/api/providers/: __init__.py  uow.py
app/domain/access_levels/entities/: access_level.py
app/domain/access_levels/interfaces/: repo.py  uow.py
app/domain/access_levels/models/: access_level.py
app/domain/access_levels/usecases/: access_levels.py
app/domain/common/dto/: base.py
app/domain/common/entities/: entity.py  value_object.py
app/domain/common/events/: dispatcher.py  observer.py
app/domain/common/models/: aggregate.py
app/domain/order/exceptions/: order.py
app/domain/order/models/: order.py
app/domain/policy/: access_policy.py
app/domain/user/: access_policy.py
app/domain/user/dto/: __init__.py  user.py
app/domain/user/entities/: base_user.py  user.py
app/domain/user/exceptions/: user.py
app/domain/user/interfaces/: repo.py  uow.py
app/domain/user/models/: base_user.py  user.py
app/domain/user/usecases/: user.py
app/infrastructure/: event_dispatcher.py
app/infrastructure/database/: db.py  uow.py
app/infrastructure/database/alembic/: env.py
app/infrastructure/database/models/: __init__.py  base.py  confirmation_path.py  order.py  user.py
app/infrastructure/database/repositories/: __init__.py  (+2 more)
app/tgbot/: Dockerfile  __main__.py  constants.py  pyproject.toml
app/tgbot/filters/: access_level.py
app/tgbot/handlers/admin/: menu.py  setup.py
app/tgbot/handlers/admin/department/: add.py  delete.py  edit.py  menu.py  setup.py
app/tgbot/handlers/admin/user/: add.py  common.py  delete.py  edit.py
app/tgbot/handlers/user/: start.py
app/tgbot/middlewares/: database.py  setup.py  user.py
app/tgbot/states/: __init__.py  admin_menu.py  department.py
deployment/: alembic.ini  tgbot.bat
(+4 files in other folders)
