[tool.poetry]
name = "cost-confirmation-bot"
version = "0.1.0"
description = ""
authors = ["darksidecat <bitalik371@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = {version = "^3.0.0b1", allow-prereleases = true}
aiogram_dialog = {git = "https://github.com/darksidecat/aiogram_dialog.git", branch = "aiogram3-setup"}
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.22"
aioredis = "~2.0.0b1"
alembic = "^1.6.5"
asyncpg = "^0.25.0"
diagrams = "^0.20.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"


[tool.poetry.dev-dependencies]
sqlalchemy2-stubs = "^0.0.2-alpha.8"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
